helm/in-progress/nginx-ingress-bak.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt
    ingress.kubernetes.io/ssl-redirect: "false"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"cert-manager.io/issuer":"letsencrypt","ingress.kubernetes.io/ssl-redirect":"false"},"creationTimestamp":"2023-09-27T05:08:40Z","generation":1,"name":"nginx","namespace":"default","resourceVersion":"1258275","uid":"899723c6-07eb-4d6a-80e4-e01fdd2314bf"},"spec":{"ingressClassName":"traefik","rules":[{"http":{"paths":[{"backend":{"service":{"name":"nginx","port":{"number":80}}},"path":"/","pathType":"Prefix"}]}} [...]
  creationTimestamp: "2023-09-27T23:38:59Z"
  generation: 1
  name: nginx
  namespace: default
  resourceVersion: "1287393"
  uid: 77a4d44b-2823-4c12-8b6a-75422930c3b6
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - ibb-01.test.cns.dev
    secretName: tls-ibb-01-test-cns-dev-ingress
status:
  loadBalancer: {}
